--- a/default.properties
+++ b/default.properties
@@ -1,10 +1,8 @@
-php_outputFolder = php/
-php_outputFolder_src = src/
-php_outputFolder_test = test/
+php_outputFolder_src = php/src/
+php_outputFolder_test = php/test/
 
-ruby_outputFolder = ruby/
-ruby_outputFolder_src = lib/datafoodconsortium/
-ruby_outputFolder_test = test/
+ruby_outputFolder_src = ruby/lib/datafoodconsortium/
+ruby_outputFolder_test = ruby/test/
 
 stereotypeAdder = datafoodconsortium_connector::adder
 stereotypeBlankNode = datafoodconsortium_connector::blankNode
