--- a/src/org/datafoodconsortium/connector/codegen/php/static/composer.json
+++ b/src/org/datafoodconsortium/connector/codegen/php/static/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=8.1",
-        "virtual-assembly/semantizer": "^1.0.0-beta1",
+        "virtual-assembly/semantizer": "^v1.0.0-beta2",
         "ml/json-ld": "^1.2"
     },
     "autoload": {
