Scaffold basic TypeScript generator

--- a/default.properties
+++ b/default.properties
@@ -4,6 +4,9 @@ php_outputFolder_test = php/test/
 ruby_outputFolder_src = ruby/lib/datafoodconsortium/
 ruby_outputFolder_test = ruby/test/
 
+typescript_outputFolder_src = typescript/src/
+typescript_outputFolder_test = typescript/test/
+
 stereotypeAdder = datafoodconsortium_connector::adder
 stereotypeBlankNode = datafoodconsortium_connector::blankNode
 stereotypeConstructor = datafoodconsortium_connector::constructor
