--- a/default.properties
+++ b/default.properties
@@ -4,7 +4,7 @@ php_outputFolder_test = php/test/
 ruby_outputFolder_src = ruby/lib/datafoodconsortium/
 ruby_outputFolder_test = ruby/test/
 
-jsVocab_outputFolder_src = js/vocab/
+typescriptVocabBusinnes_outputFolder_src = typescript/vocab/business/src/
 
 stereotypeAdder = datafoodconsortium_connector::adder
 stereotypeBlankNode = datafoodconsortium_connector::blankNode
