--- a/src/org/datafoodconsortium/connector/codegen/typescript/static/package.json
+++ b/src/org/datafoodconsortium/connector/codegen/typescript/static/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "build": "tsc -p .",
-    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest"
+    "test": "npm run build && NODE_OPTIONS=--experimental-vm-modules npx jest"
   },
   "dependencies": {
     "@rdfjs/serializer-jsonld-ext": "^4.0.0",
