Use Node's native test runner
This should alleviate the issues regarding Jest and ECMAScript Imports.
Docs: https://nodejs.org/dist/latest-v20.x/docs/api/test.html#test-runner

--- a/src/org/datafoodconsortium/connector/codegen/typescript/static/package.json
+++ b/src/org/datafoodconsortium/connector/codegen/typescript/static/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "build": "tsc -p .",
-    "test": "npm run build && NODE_OPTIONS=--experimental-vm-modules npx jest"
+    "test": "node --test test"
   },
   "dependencies": {
     "@rdfjs/serializer-jsonld-ext": "^4.0.0",
