--- a/src/org/datafoodconsortium/connector/codegen/typescript/static/package.json
+++ b/src/org/datafoodconsortium/connector/codegen/typescript/static/package.json
@@ -4,10 +4,10 @@
   "author": "Maxime Lecoq",
   "license": "MIT",
   "type": "module",
-  "version": "1.0.0-alpha.10",
+  "version": "1.0.0-alpha.11",
   "repository": {
     "type": "git",
-    "url": "https://github.com/datafoodconsortium/connector-typescript.git",
+    "url": "git+https://github.com/datafoodconsortium/connector-typescript.git",
     "directory": "/"
   },
   "scripts": {
